# contricool

./: .gitignore  .gitleaks.toml  .npmrc  CLAUDE.md  Makefile  README.md  lefthook.yml  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  .gitkeep  Dockerfile  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/cleanup/: accounts.py  main.py
apps/api/app/core/: config.py  dependencies.py  lookup_hash.py  middleware.py  observability.py  policy.py  principal.py  security.py
apps/api/app/features/auth/: README.md  cognito_client.py  errors.py  models.py  rate_limit.py  routes.py  service.py
apps/api/app/features/friends/: README.md  cursor.py  errors.py  models.py  rate_limit.py  repository.py  routes.py  service.py
apps/api/app/features/me/: README.md  models.py  repository.py  routes.py  service.py
apps/api/app/features/telemetry/: models.py  routes.py
apps/api/app/features/transactions/: README.md  balance.py  comments.py  errors.py  models.py  repository.py  routes.py  service.py  splits.py
apps/api/app/routes/: health.py
apps/api/scripts/: emit_openapi.py
apps/api/tests/: _jwt_helpers.py  conftest.py  test_dockerfile_deps.py  test_health.py  test_main.py
apps/api/tests/cleanup/: conftest.py  test_accounts.py  test_cleanup.py
apps/api/tests/core/: test_config.py  test_dependencies.py  test_lookup_hash.py  test_middleware.py  test_observability.py  test_policy.py  test_principal.py  test_security.py
apps/api/tests/features/auth/: conftest.py  test_cognito_client.py  test_errors.py  test_forgot_reset.py  test_logging_security.py  test_login_logout.py  test_rate_limit.py  test_resend.py  test_service_unit.py  test_signup.py  test_verify_email.py
apps/api/tests/features/friends/: conftest.py  test_add.py  test_balance.py  test_cross_user_privacy.py  test_cursor.py  test_friends_security.py  test_list.py  test_lookup_contract.py  test_models.py  test_rate_limit.py  test_remove.py  test_repository.py  test_service.py
apps/api/tests/features/me/: conftest.py  (+3 more)
apps/infra/: README.md  app.py  cdk.json  pyproject.toml
apps/infra/aspects/: __init__.py  security_aspect.py
apps/infra/cdk_constructs/: pii_salt.py  pii_salt_handler.py
apps/infra/stacks/: __init__.py  api_stack.py  auth_stack.py  data_stack.py  monitoring_stack.py  shared_stack.py  web_stack.py
apps/infra/tests/: test_aspects.py  test_deploy_workflow_yaml.py  test_synth.py
(+234 files in other folders)
