[project]
name = "contricool-api"
version = "0.0.1"
description = "ContriCool — FastAPI Lambda backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn==0.32.0",
    "aws-lambda-powertools[parser,tracer]==3.3.0",
    "pydantic[email]==2.9.2",
    "boto3>=1.35.0",
    "python-ulid>=2.7.0",
    "pyjwt[crypto]>=2.9.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.2",        # required by FastAPI TestClient
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "moto[ssm,cognitoidp,dynamodb]>=5.0.0",
    "boto3-stubs[ssm,cognito-idp,dynamodb]>=1.35.0",
    "pyyaml>=6.0.1",        # Phase 2e — emit_openapi.py
    "types-pyyaml>=6.0.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
