[project]
name = "contricool-infra"
version = "0.0.1"
description = "ContriCool — AWS CDK infrastructure"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.176.0,<3.0.0",
    "constructs>=10.0.0,<11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    # Used by tests/test_deploy_workflow_yaml.py to parse the GitHub
    # Actions workflow YAML files. PyYAML is also installed transitively
    # by aws-cdk-lib in some environments; declared here explicitly so
    # CI doesn't depend on that.
    "PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# CDK app — no installable package, just a top-level entry script + helpers.
# We declare zero packages so pip install works without choking on the
# multi-top-level-package layout.
py-modules = []
include-package-data = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
